changed font size, p spacing, Related Posts bug

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -270,7 +270,7 @@ padding-bottom:5%;
 }
 .articlecontainer p {
 	margin-top:2%;
-	margin-bottom:2%;
+	margin-bottom:5%;
 	letter-spacing: 0.4px;
 	line-height:;
 	line-height:1.6;
@@ -922,6 +922,10 @@ margin-top: 4%;
 
 .articlecontainer strong {
 	font-weight: bold;
+}
+
+.gist {
+	font-size: 12px;
 }
 
 .gist-meta {
